# rem53

./: CMakeLists.txt  README.md  README.rst  prj.conf  sample.yaml
src/: main.c
src/remote_service/: remote.c  remote.h
